# ytcconn

./: .gitignore  LICENSE  README.md  baseConn.py  method.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
examples/: example_basic.py  example_proxy_fetch.py  example_raw.py
legacy/: baseConn.py  method.py
ytcconn/: __init__.py  baseConn.py  method.py
ytcconn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
