[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "ytcconn"
version = "0.1.6"
description = "在cloudscraper基础上封装了一层"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="yyytc"}]
license = "MIT"
dependencies = [
  "cloudscraper>=1.2.71",
  "loguru>=0.7.3",
  "requests>=2.33.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ytcconn"]
